objects/hic_signeasy__Transaction__c.object
<CustomObject>
    <fields>
        <fullName>hic_signeasy__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sign Transactions</relationshipLabel>
        <relationshipName>Sign_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Cancelled_Reason__c</fullName>
        <label>Cancelled Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Sign Transactions</relationshipLabel>
        <relationshipName>Sign_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__CompletedOn__c</fullName>
        <label>Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sign Transactions</relationshipLabel>
        <relationshipName>Sign_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__ContentDocumentId__c</fullName>
        <label>Content Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Sign Transactions</relationshipLabel>
        <relationshipName>Sign_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Decline_Reason__c</fullName>
        <label>Decline Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Is_Signing_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Signing Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Is_Transaction_Has_In_Person__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Transaction Has In Person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Sign Transactions</relationshipLabel>
        <relationshipName>Sign_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sign Transactions</relationshipLabel>
        <relationshipName>Sign_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__OriginalDocumentId__c</fullName>
        <label>Original Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Parent_Id__c</fullName>
        <label>Parent Id</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__RequestedOn__c</fullName>
        <label>Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Send_On_Behalf_Of_Email__c</fullName>
        <label>Send On Behalf Of Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Send_On_Behalf_Of_Name__c</fullName>
        <label>Send On Behalf Of Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__SenderEmail__c</fullName>
        <label>Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__SenderName__c</fullName>
        <label>Sender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Sign_Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sign Business Unit</label>
        <referenceTo>hic_signeasy__Sign_Business_Unit__c</referenceTo>
        <relationshipLabel>Sign Transactions</relationshipLabel>
        <relationshipName>Sign_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DRAFT</fullName>
                </value>
                <value>
                    <fullName>SENT</fullName>
                </value>
                <value>
                    <fullName>COMPLETE</fullName>
                </value>
                <value>
                    <fullName>DECLINED</fullName>
                </value>
                <value>
                    <fullName>PENDING_EXPIRATION</fullName>
                </value>
                <value>
                    <fullName>CANCELLED</fullName>
                </value>
                <value>
                    <fullName>EXPIRED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hic_signeasy__Subject__c</fullName>
        <label>Subject</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__UUID__c</fullName>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>hic_signeasy__Write_Back_Status__c</fullName>
        <label>Write Back Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
                <value>
                    <fullName>COMPLETE</fullName>
                </value>
                <value>
                    <fullName>FAILED</fullName>
                </value>
                <value>
                    <fullName>DRAFT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sign Transaction</label>
    <listViews>
        <fullName>hic_signeasy__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>hic_signeasy__Today</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Today</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sign Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>